k8s/namespace.yaml
# //k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: evaluacion-ricardo
