k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evaluacion-ricardo
  namespace: evaluacion-ricardo
spec:
  replicas: 2
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: evaluacion-ricardo
  template:
    metadata:
      labels:
        app: evaluacion-ricardo
    spec:
      containers:
        - name: evaluacion-ricardo
          image: 110212123540.dkr.ecr.us-east-1.amazonaws.com/evaluacion-ricardo:v1
          ports:
            - containerPort: 3000

          readinessProbe:
            httpGet: { path: /healthz, port: 3000 }
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet: { path: /healthz, port: 3000 }
            initialDelaySeconds: 10
            periodSeconds: 15
          resources:
            requests: { cpu: 50m, memory: 64Mi }
            limits: { memory: 256Mi }
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
            capabilities:
              drop: ["ALL"]
