k8s/service.yaml
# //k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: evaluacion-ricardo
  namespace: evaluacion-ricardo
spec:
  type: ClusterIP
  selector:
    app: evaluacion-ricardo
  ports:
    - port: 80
      targetPort: 3000
